<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Changenames"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/Changenames"
        android:layout_weight="1"
        android:hint="@string/edit_message" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Changenames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="24dp"
        android:text="This is the Steve App. It changes all the contacts in your contact list&apos;s names into whatever you want, for example &quot;Steve.&quot;"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/Undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:onClick="RevertChanges"
        android:text="@string/Undo_Button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:text="Developed by: Alex Chiou and Simon Hsieh"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>